feat: integrate celestia jsonrpc client
This commit replaces the REST based astria-rs-cnc client by
the JSON RPC based astria-celestia-jsonrpc-client crate.

As part of this integration celestia-app and celestia-node were
updated to versions `v1.0.0-rc7` and `v0.11.0-rc7` respectively.

The steps required for this are listed below.

+ ci: generate celestia node auth token in lifecycle hook
+ ci: extract celestia node auth token using astria_test_utils crate
+ ci: add jsonrpc endpoints to test deployments, ingess rules
+ ci: update celestia node, app initialization scripts
+ conductor-ci: use `buildpack-deps:bookworm-curl` as the image into which astria-sequencer-relayer gets mounted
                (required for ca-certificates and tls)
+ conductor: point to `localhost:26658` by default (instead of `:26659` which was the old REST gateway)
+ conductor: allow setting bearer token in config
+ conductor: remove bad reader test (1. flaky because no guarantees there are new blocks on celestia, 2. effectively tested whether celestia can be queried)
+ conductor: fix service name in conductor ingress
+ sequencer-relayer: point to `localhost:26658` by default (instead of `:26659` which was the old REST gateway)
+ conductor: allow setting bearer token in config
+ sequencer-relayer: use serde_path_to_error when deserializing metro response
+ sequencer-relayer: allow configuring celestia fee in sequencer-relayer celestia client
+ sequencer-relayer: make `Namespace` a wrapper of `[u8; NAMESPACE_ID_AVAILABLE_LEN]` and use it everywhere instead of `String`
+ sequencer-relayer: remove `CelestiaClient::check_block_availability`: unused in `SequencerRelayer`
+ sequencer-relayer: remove `CelestiaClient::get_blocks`: unused in `SequencerRelayer`
+ sequencer-relayer: change fee to be a u128 in celestia client and allow configuring it
+ sequencer-relayer: use a fee of 100_000 to make the celestia_client test pass
+ sequencer-relayer-test: allow running sequencer-relayer tests against exis

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,18 +35,10 @@ jobs:
         run: |
           mkdir -p /tmp/astria
           cp target/release/{astria-conductor,astria-sequencer-relayer} /tmp/astria/
-      # FIXME: the gossipnet and rs-cnc tests are currently broken in CI:
-      #        https://github.com/astriaorg/astria/issues/25
       - name: Build tests
-        run: |
-          cargo test --release --no-run \
-          --workspace \
-          --exclude astria-rs-cnc
+        run: cargo test --release --no-run --workspace
       - name: Run light tests
-        run: |
-          cargo test --release \
-          --workspace \
-          --exclude astria-rs-cnc
+        run: cargo test --release --workspace
       - name: create kubernetes in docker cluster
         uses: helm/kind-action@v1.5.0
         with:
@@ -67,7 +59,6 @@ jobs:
         run: |
           cargo test --release \
           --workspace \
-          --exclude astria-rs-cnc \
           -- --ignored
 
   fmt:
@@ -107,7 +98,6 @@ jobs:
           --exclude astria-sequencer-relayer \
           --exclude astria-sequencer-relayer-test \
           --exclude astria-gossipnet \
-          --exclude astria-rs-cnc \
           -- -W clippy::pedantic -D warnings
       - name: run default clippy
         run: cargo clippy --workspace --all-targets -- -D warnings
