--- a/kubernetes-ci/prepull-daemon-set.yml
+++ b/kubernetes-ci/prepull-daemon-set.yml
@@ -14,10 +14,10 @@ spec:
     spec:
       initContainers:
         - name: prepull-celestia-app
-          image: "ghcr.io/astriaorg/celestia-app:v0.11.0"
+          image: ghcr.io/celestiaorg/celestia-app:v1.0.0-rc7
           command: ["sh", "-c", "'true'"]
         - name: prepull-celestia-node
-          image: "ghcr.io/astriaorg/celestia-node:test-sha-07fa3e7"
+          image: ghcr.io/astriaorg/test-images-celestia-node:v0.11.0-rc7
           command: ["sh", "-c", "'true'"]
         - name: prepull-metro
           image: "ghcr.io/astriaorg/metro:0.0.3"
@@ -29,7 +29,7 @@ spec:
           image: ghcr.io/astriaorg/go-ethereum:0.0.3
           command: ["sh", "-c", "'true'"]
         - name: prepull-bare-debian
-          image: docker.io/library/debian:bookworm-slim
+          image: docker.io/library/buildpack-deps:bookworm-curl
           command: ["sh", "-c", "'true'"]
       containers:
         - name: pause
