--- a/crates/astria-conductor-test/kubernetes/config-maps.yml
+++ b/crates/astria-conductor-test/kubernetes/config-maps.yml
@@ -14,21 +14,21 @@ data:
   evm_address: "0x966e6f22781EF6a6A82BBB4DB3df8E225DfD9488"
   home_dir: "/home/celestia"
 ---
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: metro-env
-data:
-  coins: "1000000000000000utick"
-  validator_stake: "5000000000utick"
-  chainid: "private"
-  keyring_backend: "test"
-  validator_key_name: "validator"
-  # evm address corresponds to private key:
-  # da6ed55cb2894ac2c9c10209c09de8e8b9d109b910338d5bf3d747a7e1fc9eb9
-  evm_address: "0x966e6f22781EF6a6A82BBB4DB3df8E225DfD9488"
-  home_dir: "/home/metro"
----
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: metro-env
+# data:
+#   coins: "1000000000000000utick"
+#   validator_stake: "5000000000utick"
+#   chainid: "private"
+#   keyring_backend: "test"
+#   validator_key_name: "validator"
+#   # evm address corresponds to private key:
+#   # da6ed55cb2894ac2c9c10209c09de8e8b9d109b910338d5bf3d747a7e1fc9eb9
+#   evm_address: "0x966e6f22781EF6a6A82BBB4DB3df8E225DfD9488"
+#   home_dir: "/home/metro"
+# ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -42,7 +42,7 @@ kind: ConfigMap
 metadata:
   name: sequencer-relayer-env
 data:
-  astria_sequencer_relayer_sequencer_endpoint: "http://localhost:1318"
+  astria_sequencer_relayer_sequencer_endpoint: "http://localhost:26657"
   astria_sequencer_relayer_celestia_endpoint: "http://localhost:26659"
   astria_sequencer_relayer_validator_key_file: "/root/.metro/config/priv_validator_key.json"
 ---
