--- a/crates/astria-conductor-test/kubernetes/deployment.yml
+++ b/crates/astria-conductor-test/kubernetes/deployment.yml
@@ -41,9 +41,9 @@ spec:
             - configMapRef:
                 name: celestia-env
         - command:
-          - /usr/local/bin/cometbft init
+          - /home/cometbft/cometbft init
           name: init-cometbft
-          image: "ghcr.io/astriaorg/cometbft:0.0.1"
+          image: "ghcr.io/noot99/cometbft:latest"
           volumeMounts:
             - mountPath: /home/cometbft
               name: cometbft-home-vol
@@ -115,21 +115,6 @@ spec:
           ports:
             - containerPort: 26659
               name: bridge-svc
-        # - name: metro-sequencer
-        #   command: ["/scripts/start-metro.sh"]
-        #   image: "ghcr.io/astriaorg/metro:0.0.3"
-        #   ports:
-        #     - containerPort: 1318
-        #       name: sequencer-svc
-        #     - containerPort: 9100
-        #   volumeMounts:
-        #     - mountPath: /scripts/
-        #       name: metro-scripts-volume
-        #     - mountPath: /home/metro
-        #       name: metro-home-vol
-        #   envFrom:
-        #     - configMapRef:
-        #         name: metro-env
         - name: astria-sequencer
           # TODO: genesis state?
           command: ["/usr/local/bin/astria-sequencer"]
@@ -137,7 +122,7 @@ spec:
           ports:
             - containerPort: 26658
               name: sequencer-svc
-            - containerPort: 9100
+            - containerPort: 9100 # what is this for? 
           volumeMounts:
             - mountPath: /home/sequencer
               name: sequencer-home-vol
@@ -145,8 +130,8 @@ spec:
             - configMapRef:
                 name: sequencer-env
         - name: cometbft
-          command: ["/usr/local/bin/cometbft start"]
-          image: "ghcr.io/astriaorg/cometbft:0.0.1"
+          command: ["/home/cometbft/cometbft start"]
+          image: "ghcr.io/noot99/cometbft:latest"
           ports:
             - containerPort: 26657
               name: cometbft-svc
