--- a/crates/astria-conductor/justfile
+++ b/crates/astria-conductor/justfile
@@ -7,13 +7,13 @@ create-cluster:
 delete-cluster:
   kind delete cluster --name test-cluster
 
-deploy-ingress-controller:
+deploy-ingress:
   kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
 
 perform-prepull:
-  kubectl apply -f ./astria-conductor-test/kubernetes/prepull-daemon-set.yml
+  kubectl apply -f ../astria-conductor-test/kubernetes/prepull-daemon-set.yml
 
-prepare-test-environment: create-cluster deploy-ingress-controller perform-prepull
+prepare-test-environment: create-cluster deploy-ingress perform-prepull
 
 create-namespace:
   kubectl create namespace test
