--- a/crates/astria-conductor/justfile
+++ b/crates/astria-conductor/justfile
@@ -2,10 +2,10 @@ default:
   @just --list
 
 create-cluster:
-  kind create cluster --config ./astria-conductor-test/kubernetes/cluster-config.yml
+  kind create cluster --config ../astria-conductor-test/kubernetes/cluster-config.yml
 
 delete-cluster:
-  kind delete cluster --name test-cluster
+  kind delete cluster --name conductor-test-cluster
 
 deploy-ingress:
   kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
@@ -19,10 +19,10 @@ create-namespace:
   kubectl create namespace test
 
 deploy-test-environment:
-  kubectl apply -n test -k ./astria-conductor-test/kubernetes
+  kubectl apply -n test -k ../astria-conductor-test/kubernetes
 
 query-sequencer:
-  curl http://test.localdev.me/sequencer/cosmos/base/tendermint/v1beta1/blocks/latest
+  curl http://test.localdev.me/sequencer/block
 
 wait-for-ingress-controller:
   kubectl wait --namespace ingress-nginx --for=condition=ready pod --selector=app.kubernetes.io/component=controller --timeout=600s
@@ -34,7 +34,7 @@ wait-for-test-environment:
   kubectl wait -n test --for=condition=available deployment.apps/conductor-environment-deployment --timeout=600s
 
 kustomize:
-  kubectl kustomize ./astria-conductor-test/kubernetes -o ./astria-conductor-test/kubernetes/test-environment.yml
+  kubectl kustomize ../astria-conductor-test/kubernetes -o ../astria-conductor-test/kubernetes/test-environment.yml
 
 create-ingress-rule:
   kubectl apply -n test -f ./astria-conductor-test/kubernetes/ingress.yml
