--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -6,7 +6,7 @@ on:
       package-name:
         required: true
         type: string
-      dockerfile:
+      target-binary:
         required: true
         type: string
 env:
@@ -51,7 +51,9 @@ jobs:
           # https://github.com/docker/build-push-action/issues/820#issuecomment-1455687416
           provenance: false
           context: .
-          file: ${{ inputs.dockerfile }}
+          file: containerfiles/Dockerfile
+          build-args: |
+            TARGETBINARY=${{ inputs.target-binary }}
           platforms: 'linux/amd64,linux/arm64'
           push: true
           tags: ${{ steps.metadata.outputs.tags }}
