update relayer setup wip

--- a/kubernetes-ci/prepull-daemon-set.yml
+++ b/kubernetes-ci/prepull-daemon-set.yml
@@ -19,13 +19,13 @@ spec:
         - name: prepull-celestia-node
           image: "ghcr.io/astriaorg/celestia-node:test-sha-07fa3e7"
           command: ["sh", "-c", "'true'"]
-        - name: prepull-metro
-          image: "ghcr.io/astriaorg/metro:0.0.3"
+        - name: prepull-cometbft
+          image: "ghcr.io/noot99/cometbft:latest"
           command: ["sh", "-c", "'true'"]
         - name: prepull-dasel
           image: ghcr.io/tomwright/dasel:alpine
           command: ["sh", "-c", "'true'"]
-        - name: prepull-go-ethereum
+        - name: prepull-go-ethereum # unused?
           image: ghcr.io/astriaorg/go-ethereum:0.0.3
           command: ["sh", "-c", "'true'"]
         - name: prepull-bare-debian
