--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,6 @@
 members = [
   "crates/astria-celestia-jsonrpc-client",
   "crates/astria-conductor",
-  "crates/astria-conductor-test",
   "crates/astria-gossipnet",
   "crates/astria-proto",
   "crates/astria-sequencer",
@@ -51,6 +50,7 @@ tempfile = "3.5.0"
 tendermint = "0.32"
 tendermint-config = "0.32"
 tendermint-proto = "0.32"
+tendermint-rpc = "0.32"
 tokio = "1.28"
 tonic = "0.9"
 tracing = "0.1"
