--- a/crates/astria-gossipnet/Cargo.toml
+++ b/crates/astria-gossipnet/Cargo.toml
@@ -13,5 +13,6 @@ hex = { workspace = true }
 tracing = { workspace = true }
 
 [dev-dependencies]
+tempfile = "3.6"
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }
